# this builds all juce modules except plugin_client wrapper

IF ( APPLE )
	ADD_DEFINITIONS(
		-std=c++11
	)
ENDIF ( APPLE )

IF(UNIX AND NOT APPLE AND NOT ANDROID)
	set(CMAKE_CXX_FLAGS_DEBUG "-fPIC")
	set(CMAKE_CXX_FLAGS_RELEASE "-fPIC")
ENDIF(UNIX AND NOT APPLE AND NOT ANDROID)

INCLUDE_DIRECTORIES ( BEFORE build-juce )

ADD_LIBRARY ( JUCE_STATIC STATIC ${JUCE_SOURCE} )
TARGET_LINK_LIBRARIES ( JUCE_STATIC ${JUCE_LIBRARIES} )

GET_TARGET_PROPERTY(JUCE_STATIC_LIB JUCE_STATIC LOCATION)

set(JUCE_STATIC_LIB ${JUCE_STATIC_LIB} PARENT_SCOPE) # set global scope
